[gd_scene load_steps=3 format=3 uid="uid://dmbypcaa3sikw"]

[ext_resource type="Script" uid="uid://dm6jahgw3i8sp" path="res://scenes/tag_group_entry_script.gd" id="1_3fxqq"]
[ext_resource type="Texture2D" uid="uid://npqh5bbjbbcr" path="res://icons/trash_bin_large.svg" id="2_uw2xu"]

[node name="TagGroupEntry" type="HBoxContainer"]
custom_minimum_size = Vector2(0, 32)
script = ExtResource("1_3fxqq")

[node name="TagLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Yoshi"

[node name="WeightSpinBx" type="SpinBox" parent="."]
layout_mode = 2
tooltip_text = "Tag Weight
Probability this tag is picked"
step = 0.01
value = 100.0
suffix = "%"

[node name="VSeparator" type="VSeparator" parent="."]
layout_mode = 2

[node name="GroupTriggerMnBtn" type="MenuButton" parent="."]
layout_mode = 2
tooltip_text = "If this tag is selected
add tags from these groups."
text = "Triggers"
item_count = 1
popup/item_0/text = "Group A"
popup/item_0/checkable = 1
popup/item_0/id = 0

[node name="VSeparator2" type="VSeparator" parent="."]
layout_mode = 2

[node name="RemoveTagBtn" type="Button" parent="."]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
icon = ExtResource("2_uw2xu")
flat = true
icon_alignment = 1
